Fixed z-indexes for loader screen, root navigation, toggle button for root nav and flash notification

--- a/dcfrontend/app/components/styles/flash.module.css
+++ b/dcfrontend/app/components/styles/flash.module.css
@@ -17,6 +17,6 @@
     background-color: var(--background2);
     color: white;
     padding: 10px;
-
+    z-index: 30;
     animation: slideDownFadeIn 0.4s cubic-bezier(0.16, 1, 0.3, 1) forwards;
 }
